...
    <string name="by_browse_nuance">by </string>
    <string name="you_the_host">by you</string>
    <string name="im_in">LET\'S GO!</string>
    <string name="nevermind">NEVERMIND</string>
    <string name="more_button">MORE</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_button">DELETE</string>
    <string name="chat_button">CHAT</string>
    <string name="browse">browse</string>
    <string name="attending">attending</string>
    <string name="event_details">Event Details</string>
    <string name="search">Search Events</string>
    <string name="search_hint">Search by text (name,desc) &#8230;</string>

    <!-- Cached ident props -->
    <string name="fb_id">facebookId</string>
    <string name="user_id">userId</string>
    <string name="access_token">accessToken</string>
    <string name="token">token</string>
    <string name="profile_pic">profileImgUrl</string>
    <string name="user_name">userName</string>
    <string name="user_email">userEmail</string>

    <!-- API URLs-->
    <string name="oauth_endpoint">https://api.evnt.me/users/oauth</string>
    <string name="event_get_in">https://api.evnt.me/events/api/in/</string>
    <string name="event_get_avail">https://api.evnt.me/events/api/avail/</string>
    <string name="event_create">https://api.evnt.me/events/create/</string>
...
