<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pick_evnt"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/menu_pick"/>

    <item
        android:id="@+id/browse_evnt"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_browse"/>

<!--    <item-->
<!--        android:id="@+id/chat_evnt"-->
<!--        android:icon="@drawable/ic_chat_black_24dp"-->
<!--        android:title="@string/menu_chat"/>-->

    <item
        android:id="@+id/my_events"
        android:icon="@drawable/ic_phone_android_black_24dp"
        android:title="@string/menu_phone"/>

    <item
        android:id="@+id/profile_evnt"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_profile"/>


</menu>
